--- a/style.css
+++ b/style.css
@@ -16,6 +16,39 @@ body{
     height: 93vh;
 }
 
+.aplicativos{
+    position: absolute;
+    left: 0%;
+    padding: 10px;
+}
+
+.card{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    margin-bottom: 10px;
+    border-radius: 5px;
+    padding: 5px;
+    cursor: pointer;
+    transition-duration: 0.5s;
+}
+
+.card:hover{
+    background-color: rgba(255, 255, 255, 0.63);
+}
+
+.card p{
+    margin-top: 5px;
+    margin-bottom: 0px;
+}
+
+.card img{
+    width: 50px;
+    height: 50px;
+}
+
 /*-----Barra-----*/
 .barra{
     width: 100%;
